Refactor Main method using HttpURLConnection to get http response in string format